[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.870588, 0.0666667, 0.0666667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.215686, 0.215686, 0.215686, 0.866667 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0196078, 0.462745, 0.917647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.211765, 0.211765, 0.211765, 0.913725 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.792157, 0.356863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.294118, 0.294118, 0.294118, 0.913725 )

[node name="Interface" type="Control"]
margin_right = 384.0
margin_bottom = 192.0
script = ExtResource( 1 )

[node name="BarsControll" type="Node" parent="."]

[node name="HealthBar" type="ProgressBar" parent="BarsControll"]
modulate = Color( 0.945801, 0.945801, 0.945801, 1 )
margin_left = 44.0
margin_right = 124.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 0
custom_styles/fg = SubResource( 9 )
value = 100.0
rounded = true
percent_visible = false

[node name="ManaBar" type="ProgressBar" parent="BarsControll"]
margin_left = 44.0
margin_top = 8.0
margin_right = 124.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 0
custom_styles/fg = SubResource( 10 )
value = 100.0
rounded = true
percent_visible = false

[node name="ExpBar" type="ProgressBar" parent="BarsControll"]
margin_left = 44.0
margin_top = 16.0
margin_right = 124.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 0
custom_styles/fg = SubResource( 11 )
value = 100.0
rounded = true
percent_visible = false
